Fixed an issue where emeralds and diamonds generators didn't work added `debugTeamGenerators`, `debugDiamondGenerators`, `debugEmeraldGenerators` and `eliminateEmptyTeams` to the config

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,12 @@
+# Debug Values
+debugTeamGenerators: false
+debugDiamondGenerators: false
+debugEmeraldGenerators: false
+
 # Server Values
 requiredPlayersToStart: 0
 autoStartWithServer: false
+eliminateEmptyTeams: false
 autoStartDelay: 5s
 mapName: "<Map>"
 modeName: "<Mode>"
